--- a/documentation/mkdocs.yml
+++ b/documentation/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
       - Federated Operation: Private/Federated Operation.md
   - Databases: Databases.md
   - Model: Model.md
+  - Learning Approach: Learning Approach.md
   - Differential Privacy:
       - Mechanisms: Differential privacy/Mechanisms.md
       - Sensitivity Sampler: Differential privacy/Sensitivity Sampler.md
