--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -20,7 +20,7 @@ nav:
   - Data Distribution: data_distribution.md
   - Model: model.md
   - Federated Aggregator: federated_aggregator.md
-  - Learning Approach: federated_government.md
+  - Federated Government: federated_government.md
   - Differential Privacy:
       - Mechanisms: differential_privacy/mechanisms.md
       - Sensitivity Sampler: differential_privacy/sensitivity_sampler.md
